/*
 * $Id: ChangeLog,v 1.1445 2003/09/11 10:38:59 mlombardo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-11 14:06 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
   * tests/Makefile
     ! added dbf libs

   * source/rtl/hblog.prg
     ! Was not using the program name as default log name. Fixed

   * source/vm/thread.c
     ! WaitForThreads() terminates if a thread issue a Quit() request.

   + source/rtl/hbservice.c
   + include/hbservice.ch
      + Service/signal handing multiplatform interface. Currently
         added only to linux. Windows compilation will be added
         later this evening.

   * source/rtl/Makefile
      + support for hbservice.c

   + tests/service.prg
      + a test for hbservice


2003-11-03 07:35 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/rtl/hbcompress.c
    ! Corrected typo in HB_UNCOMPRESS parameter check

2003-09-11 11:30 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * harbour/harbour.spec
    * small fix in auto platform detection (thanks to Tomaz Zupan)
  * harbour/make_tgz.sh
    * added auto platform detection

2003-09-10 23:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/vm/arrays.c
    + Added void hb_arrayReleaseHolderGarbage( PHB_BASEARRAY pBaseArray, void *pOwner );
    * Modified hb_arrayReleaseGarbage() to use hb_arrayReleaseHolderGarbage() instead of hb_arrayReleaseHolder()
      hb_arrayReleaseHolderGarbage() does not call hb_arrayReleaseBase() even for last Owner to avoid Cyclic issues.
      like premature release of a block refernced by an element, which is already scheduled for removal by the GC.

  * source/vm/estack.c
    * Added commented debuging TraceLog() calls.

  * source/vm/hvm.c
    * Moved hb_memvarsRelease() call till after hb_gcReleaseAll(). This fixed GPF trap because a detached local from a block